--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.datashield</groupId>
 	<artifactId>datashield-datamask-layer</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>datashield-datamask-layer</name>
 	<description>数据之盾——隐私数据脱敏管理平台——数据脱敏层</description>
 	<licenses>
