--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: DataShield-DataMask-Layer
+    name: DataShield-Work-Layer
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/db_DataShield
     username: root
